fixed spinner width on small screens

--- a/styles/group.module.css
+++ b/styles/group.module.css
@@ -131,6 +131,7 @@
 .metadata {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .metadata h2 {
